--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/covenant
-    username: root
-    password: password
+    url: jdbc:mysql://127.0.0.1:3306/covenant # MySQL Host,DB
+    username: root # username
+    password: 12345678 # password
   jpa:
     hibernate:
       ddl-auto: create
+      # create : springboot? ???? ?????? ?? ?? => ?? ??? ??
+      # create-drop : springboot? ???? ??? ???
+      # update : Entity ???? DB? ???? DB? ???? ?? ???, ?? ??
+      # validate : Entity ???? DB ???? ??? ??
